# oss-inventory

./: .gitignore  Cargo.toml  README.md  gather-data.sh
src/: main.rs
