[package]
name = "oss-inventory"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.4"
clap = { version = "4.2.3", features = ["derive"] }
csv = "1.2.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
